hide btns on bottom of index

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
   </nav>
   <div class="social-button-container">
       <a href="https://www.facebook.com/profile.php?id=61582116278117" target="_blank" rel="noopener noreferrer">
-          <button class="bottom-btn">Facebook</button>
+          <button class="bottom-btn" id="btn-hide">Facebook</button>
         </a>
 
         <a href="" target="_blank" rel="noopener noreferrer">
-          <button class="bottom-btn">Instagram</button>
+          <button class="bottom-btn" id="btn-hide">Instagram</button>
         </a>
     </div>
 
