form modal test 2

--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@ function initScrollTrack() {
       method="POST"
       data-netlify="true"
       netlify-honeypot="bot-field"
-      action="/inquiry.html"
+      action="/inquiry.html?from=footerSpot"
     >
       <!-- required for Netlify forms to work when not using Netlify’s build detection -->
       <input type="hidden" name="form-name" value="spot-request" />
