--- a/services.html
+++ b/services.html
@@ -1726,178 +1726,162 @@ window.addEventListener("resize", () => {
 }
 </style>
 <script>
-  gsap.registerPlugin(ScrollTrigger);
+gsap.registerPlugin(ScrollTrigger);
 
-  // ✅ GLOBAL CONTROLS (desktop)
-  const WIPE_END_DISTANCE = 900;
-  const SCRUB_SMOOTHNESS  = 1.1;
-  const LINE_DURATION     = 1.0;
-  const OVERLAP           = 0.0;
+// ✅ desktop tuning
+const DESKTOP_END_DISTANCE = 900;
+const DESKTOP_SCRUB        = 1.1;
 
-  // ✅ MOBILE CONTROLS (no scrub to prevent scroll locking)
-  const MOBILE_LINE_STAGGER = 0.12;   // spacing between line wipes
-  const MOBILE_LINE_DUR     = 0.55;   // duration per line (seconds)
+// ✅ mobile tuning (still scrubbed)
+const MOBILE_SCRUB         = 0.8;          // slightly less “lag”
+const MOBILE_END_MODE      = "bottom 40%"; // end relative to viewport (more stable than +=900)
 
-  const isMobile = () => window.matchMedia("(max-width: 768px)").matches;
+function isMobile() {
+  return window.matchMedia("(max-width: 768px)").matches;
+}
 
-  function buildWipeFor(sectionEl) {
-    const p = sectionEl.querySelector(".wipe-copy");
-    if (!p) return;
+function buildWipeFor(sectionEl) {
+  const p = sectionEl.querySelector(".wipe-copy");
+  if (!p) return;
 
-    const state = sectionEl.__wipeState || (sectionEl.__wipeState = { st: null, tl: null });
+  // per-section state
+  const state = sectionEl.__wipeState || (sectionEl.__wipeState = { st: null, tl: null });
 
-    // kill only our stuff
-    if (state.st) { state.st.kill(); state.st = null; }
-    if (state.tl) { state.tl.kill(); state.tl = null; }
+  // kill only ours
+  if (state.st) { state.st.kill(); state.st = null; }
+  if (state.tl) { state.tl.kill(); state.tl = null; }
 
-    // normalize source text (store once)
-    const raw = (p.__rawText || p.textContent).replace(/\s+/g, " ").trim();
-    if (!raw) return;
-    if (!p.__rawText) p.__rawText = raw;
+  // store original once
+  const raw = (p.__rawText || p.textContent).replace(/\s+/g, " ").trim();
+  if (!raw) return;
+  if (!p.__rawText) p.__rawText = raw;
 
-    // --- 1) temp word spans to measure wrapping ---
-    const words = raw.split(" ");
-    p.innerHTML = "";
-    words.forEach((w, i) => {
-      const span = document.createElement("span");
-      span.className = "w";
-      span.textContent = w;
-      p.appendChild(span);
-      if (i !== words.length - 1) p.appendChild(document.createTextNode(" "));
-    });
+  // --- 1) temp word spans to measure wrapping ---
+  const words = raw.split(" ");
+  p.innerHTML = "";
+  words.forEach((w, i) => {
+    const span = document.createElement("span");
+    span.className = "w";
+    span.textContent = w;
+    p.appendChild(span);
+    if (i !== words.length - 1) p.appendChild(document.createTextNode(" "));
+  });
 
-    const wordEls = Array.from(p.querySelectorAll(".w"));
-    if (!wordEls.length) return;
+  const wordEls = Array.from(p.querySelectorAll(".w"));
+  if (!wordEls.length) return;
 
-    // --- 2) group into visual lines by offsetTop ---
-    const groups = [];
-    let current = [wordEls[0]];
-    let top = wordEls[0].offsetTop;
+  // --- 2) group into lines by offsetTop ---
+  const groups = [];
+  let current = [wordEls[0]];
+  let top = wordEls[0].offsetTop;
 
-    for (let i = 1; i < wordEls.length; i++) {
-      const w = wordEls[i];
-      if (Math.abs(w.offsetTop - top) > 1) {
-        groups.push(current);
-        current = [w];
-        top = w.offsetTop;
-      } else {
-        current.push(w);
-      }
-    }
-    if (current.length) groups.push(current);
-
-    // --- 3) rebuild into line spans + overlay wipe ---
-    p.innerHTML = "";
-    const overlays = groups.map((g) => {
-      const text = g.map(el => el.textContent).join(" ").trim();
-
-      const lineEl = document.createElement("span");
-      lineEl.className = "line";
-      lineEl.textContent = text;
-
-      const overlay = document.createElement("span");
-      overlay.className = "reveal";
-
-      const inner = document.createElement("span");
-      inner.className = "reveal-inner";
-      inner.textContent = text;
-
-      overlay.appendChild(inner);
-      lineEl.appendChild(overlay);
-      p.appendChild(lineEl);
-
-      return overlay;
-    });
-
-    // explicit start state (critical)
-    gsap.set(overlays, {
-      clipPath: "inset(0 100% 0 0)",
-      WebkitClipPath: "inset(0 100% 0 0)"
-    });
-
-    // --- 4) timeline ---
-    let tl;
-
-    if (isMobile()) {
-      // ✅ MOBILE: NOT scrubbed (prevents scroll lock)
-      tl = gsap.timeline({ defaults: { ease: "power2.out" }, paused: true });
-      overlays.forEach((ov, i) => {
-        tl.to(ov, {
-          clipPath: "inset(0 0% 0 0)",
-          WebkitClipPath: "inset(0 0% 0 0)",
-          duration: MOBILE_LINE_DUR
-        }, i * MOBILE_LINE_STAGGER);
-      });
-
-      state.st = ScrollTrigger.create({
-        trigger: sectionEl,
-        start: "top 80%",
-        end: "bottom 20%",
-        onEnter: () => tl.play(),
-        onLeaveBack: () => tl.reverse(),
-        invalidateOnRefresh: true
-      });
-
+  for (let i = 1; i < wordEls.length; i++) {
+    const w = wordEls[i];
+    if (Math.abs(w.offsetTop - top) > 1) {
+      groups.push(current);
+      current = [w];
+      top = w.offsetTop;
     } else {
-      // ✅ DESKTOP: EXACTLY like you had it (scrubbed)
-      tl = gsap.timeline({ defaults: { ease: "none" } });
-      overlays.forEach((ov, i) => {
-        tl.to(ov, {
-          clipPath: "inset(0 0% 0 0)",
-          WebkitClipPath: "inset(0 0% 0 0)",
-          duration: LINE_DURATION
-        }, i === 0 ? 0 : `+=${OVERLAP}`);
-      });
-
-      state.st = ScrollTrigger.create({
-        animation: tl,
-        trigger: sectionEl,
-        start: "top 75%",
-        end: `+=${WIPE_END_DISTANCE}`,
-        scrub: SCRUB_SMOOTHNESS,
-        invalidateOnRefresh: true
-      });
+      current.push(w);
     }
-
-    state.tl = tl;
   }
+  if (current.length) groups.push(current);
 
-  function buildAllWipes() {
-    document.querySelectorAll(".design-section").forEach(buildWipeFor);
-  }
+  // --- 3) rebuild into line spans + overlay wipe ---
+  p.innerHTML = "";
+  const overlays = groups.map(g => {
+    const text = g.map(el => el.textContent).join(" ").trim();
 
-  // ✅ IMPORTANT MOBILE FIX:
-  // - iOS fires resize on URL bar changes -> DO NOT rebuild on mobile
-  // - only rebuild when width truly changes (orientation / real resize)
-  let lastW = window.innerWidth;
+    const lineEl = document.createElement("span");
+    lineEl.className = "line";
+    lineEl.textContent = text;
 
-  window.addEventListener("load", () => {
-    // stop ScrollTrigger from trying to constantly refresh on mobile resizes
-    ScrollTrigger.config({ ignoreMobileResize: true });
+    const overlay = document.createElement("span");
+    overlay.className = "reveal";
 
+    const inner = document.createElement("span");
+    inner.className = "reveal-inner";
+    inner.textContent = text;
+
+    overlay.appendChild(inner);
+    lineEl.appendChild(overlay);
+    p.appendChild(lineEl);
+
+    return overlay;
+  });
+
+  // explicit start state
+  gsap.set(overlays, {
+    clipPath: "inset(0 100% 0 0)",
+    WebkitClipPath: "inset(0 100% 0 0)"
+  });
+
+  // timeline (keep linear for scrub)
+  const tl = gsap.timeline({ defaults: { ease: "none" } });
+  overlays.forEach((ov) => {
+    tl.to(ov, {
+      clipPath: "inset(0 0% 0 0)",
+      WebkitClipPath: "inset(0 0% 0 0)",
+      duration: 1
+    });
+  });
+
+  // ✅ ScrollTrigger (scrubbed on both)
+  const mobile = isMobile();
+
+  const st = ScrollTrigger.create({
+    animation: tl,
+    trigger: sectionEl,
+    start: mobile ? "top 85%" : "top 75%",
+    end: mobile ? MOBILE_END_MODE : `+=${DESKTOP_END_DISTANCE}`,
+    scrub: mobile ? MOBILE_SCRUB : DESKTOP_SCRUB,
+
+    // ✅ KEY: don't let iOS refresh math while scrolling for this trigger
+    invalidateOnRefresh: !mobile
+  });
+
+  state.tl = tl;
+  state.st = st;
+}
+
+function buildAllWipes() {
+  document.querySelectorAll(".design-section").forEach(buildWipeFor);
+}
+
+window.addEventListener("load", () => {
+  // ✅ KEY iOS fix: ignore address-bar resize refreshes
+  ScrollTrigger.config({
+    ignoreMobileResize: true,
+    autoRefreshEvents: "visibilitychange,DOMContentLoaded,load" // remove resize from auto-refresh
+  });
+
+  buildAllWipes();
+  ScrollTrigger.refresh();
+});
+
+// ✅ Mobile: do NOT rebuild on resize (address bar fires resize)
+// ✅ Only rebuild on real orientation changes
+window.addEventListener("orientationchange", () => {
+  setTimeout(() => {
     buildAllWipes();
     ScrollTrigger.refresh();
-  });
+  }, 400);
+});
 
-  window.addEventListener("resize", () => {
-    if (window.innerWidth === lastW) return;
-    lastW = window.innerWidth;
+// ✅ Desktop: rebuild on real resizes (optional)
+let lastW = window.innerWidth;
+window.addEventListener("resize", () => {
+  if (isMobile()) return;                 // ❌ never rebuild on mobile resize
+  if (window.innerWidth === lastW) return;
+  lastW = window.innerWidth;
 
-    clearTimeout(window.__wipeRT);
-    window.__wipeRT = setTimeout(() => {
-      buildAllWipes();
-      ScrollTrigger.refresh();
-    }, 250);
-  });
-
-  window.addEventListener("orientationchange", () => {
-    setTimeout(() => {
-      buildAllWipes();
-      ScrollTrigger.refresh();
-    }, 400);
-  });
+  clearTimeout(window.__wipeResizeTimer);
+  window.__wipeResizeTimer = setTimeout(() => {
+    buildAllWipes();
+    ScrollTrigger.refresh();
+  }, 200);
+});
 </script>
-
 
 <script src="app.js"></script>
 </body>
