text reveal slower

--- a/services.html
+++ b/services.html
@@ -1745,8 +1745,8 @@ const DESKTOP_END_DISTANCE = 900;
 const DESKTOP_SCRUB        = 1.1;
 
 // ✅ mobile tuning (still scrubbed)
-const MOBILE_SCRUB    = 0.75;      // smoother, but still responsive
-const MOBILE_END_MODE = "top 30%"; // more scroll distance than 35%
+const MOBILE_SCRUB    = 0.85;
+const MOBILE_END_MODE = "top 20%";
 
 function isMobile() {
   return window.matchMedia("(max-width: 768px)").matches;
