text scroll test 1

--- a/services.html
+++ b/services.html
@@ -1745,8 +1745,8 @@ const DESKTOP_END_DISTANCE = 900;
 const DESKTOP_SCRUB        = 1.1;
 
 // ✅ mobile tuning (still scrubbed)
-const MOBILE_SCRUB    = 0.95;
-const MOBILE_END_MODE = "top 15%";
+const MOBILE_SCRUB    = 0.6;          // slightly tighter than 0.8
+const MOBILE_END_MODE = "bottom 55%"; // finishes sooner but same logic
 
 function isMobile() {
   return window.matchMedia("(max-width: 768px)").matches;
